# space-explorer

./: .gitmodules  CMakeLists.txt
cmake/: CONCURRENTQUEUEConfig.cmake  FLECSConfig.cmake  FMTConfig.cmake  GLADConfig.cmake  GLMConfig.cmake  JSONConfig.cmake  LOOSEQUADTREEConfig.cmake  SFMLConfig.cmake  SPDLOGConfig.cmake
engine/include/engine/: Engine.hpp
engine/include/engine/module/: fs.hpp  graphics.hpp  main_window.hpp  map.hpp  space.hpp  time.hpp
engine/include/engine/module/graphics/: graphics.inl
engine/include/engine/utils/: noncopyable.hpp  pimpl_ptr.hpp
engine/src/: Engine.cpp
engine/src/module/: fs.cpp  main_window.cpp  time.cpp
engine/src/module/space/: SpatialIndex.cpp  SpatialIndex.hpp  TreeObject.cpp  TreeObject.hpp  TreeObjectDeleter.cpp  TreeObjectDeleter.hpp  internal_components.hpp  module.cpp  rect_math.hpp  space.cpp  systems.cpp  systems.hpp
resources/: rsystems-execute-queue.jsonc
src/: main.cpp  setup_spdlog.cpp  setup_spdlog.hpp
